--- a/wg-easy/docker-compose.yaml
+++ b/wg-easy/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - WG_HOST=wg.julenoctavio.com    # Public IP or domain name where WG-Easy is accessible.
       - PORT=51821                  # Port for the web interface.
       - WG_PORT=51820               # WireGuard port for VPN traffic.
-      - WG_DEFAUL_DNS=$LOCAL_IP     # DNS
+      - WG_DEFAUL_DNS=1.1.1.1       # DNS
     volumes:
       - ./wg-easy/:/etc/wireguard   # Volume mapping for WireGuard configuration files.
     ports:
