--- a/wg-easy/docker-compose.yaml
+++ b/wg-easy/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
       - PORT=51821                  # Port for the web interface.
       - WG_PORT=51820               # WireGuard port for VPN traffic.
       - WG_DEFAUL_DNS=1.1.1.1       # DNS
-    volumes:
-      - ./wg-easy/:/etc/wireguard   # Volume mapping for WireGuard configuration files.
+volumes:
+      - $WG_PATH:/etc/wireguard
     ports:
       - "51820:51820/udp"           # UDP port used by WireGuard.
       - "51821:51821/tcp"           # TCP port for accessing the web interface.
