--- a/wg-easy/docker-compose.yaml
+++ b/wg-easy/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - WG_HOST=wg.julenoctavio.com    # Public IP or domain name where WG-Easy is accessible.
       - PORT=51821                  # Port for the web interface.
       - WG_PORT=51820               # WireGuard port for VPN traffic.
-      - WG_DEFAUL_DNS=1.1.1.1       # DNS
-volumes:
+      - WG_DEFAULT_DNS=1.1.1.1      # DNS
+    volumes:
       - $WG_PATH:/etc/wireguard
     ports:
       - "51820:51820/udp"           # UDP port used by WireGuard.
