--- a/ai-core/docker-compose.yml
+++ b/ai-core/docker-compose.yml
@@ -1,11 +1,7 @@
-version: '3.8'
-
 volumes:
-  n8n_storage:
   postgres_storage:
   qdrant_storage:
   ollama_storage:
-  open_webui_storage:
 
 networks:
   ai_network:
@@ -73,7 +69,7 @@ services:
       qdrant:
         condition: service_started
     volumes:
-      - n8n_storage:/home/node/.n8n
+      - $N8N_STORAGE:/home/node/.n8n
 
   ollama:
     image: ollama/ollama:latest
@@ -104,6 +100,6 @@ services:
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
     volumes:
-      - open_webui_storage:/app/backend/data
+      - $OPEN_WEBUI_STORAGE:/app/backend/data
     depends_on:
       - ollama
