--- a/ai-core/docker-compose.yml
+++ b/ai-core/docker-compose.yml
@@ -98,7 +98,7 @@ services:
     ports:
       - "3000:8080"
     environment:
-      - OLLAMA_BASE_URL=http://ollama:11434
+      - OLLAMA_BASE_URL=http://$LOCAL_IP:11434
     volumes:
       - $OPEN_WEBUI_STORAGE:/app/backend/data
     depends_on:
